# Ducky

./: .gitignore  BUGS.md  CMakeLists.txt  LICENSE  README.md  camera.hpp  imgui.ini  main.cpp  main.hpp  model.dky  notes.txt  project.hpp  test_glfw  test_glfw.cpp
include/glad/: glad.h
shaders/: axes.vert  edge.vert  tesseract.frag  tesseract.vert  text.vert
src/: 2d.hpp  3d.hpp  4d.hpp  camera.hpp  dimensions.hpp  ducky_chatgpt.cpp  glad.c  main.cpp  main.hpp  main_chatgpt.cpp  main_glx.cpp  render.hpp  stb_easy_font.h
